# hexapoda

./: Cargo.toml  README.md  build.rs  export config.swift  todo.md
.github/workflows/: publish.yml  release.yml
icon/: conical byte gradient.xcf
src/: action.rs  app.rs  buffer.rs  config.rs  cursor.rs  edit_action.rs  empty_span.rs  main.rs  popup.rs  utilities.rs
src/app/: actions.rs  mod.rs  widget.rs
src/buffer/: actions.rs  mod.rs  widget.rs
src/buffer/widget/: character_panel.rs  entry.rs  extra_statuses.rs  hex.rs  status_line.rs
src/config/: default.rs
src/cursor/: actions.rs
src/utilities/: cardinality.rs  empty_span.rs  floor_to_the_nearest.rs  is_overlapping.rs  saturating_subtract.rs
